# shiny-potato

./: .gitignore  LICENSE  Makefile  README.md  fetch.sh
2021/: Makefile
2021/src/: 01.c  02.c  03.c  04.c  05.c  06.c  07.c  08.c  09.c  10.c  11.c  12.c  13.c  14.c  15.c  16.c  17.c  18.c  19.c  20.c  21.c  22.c  23.c  24.c  25.c  aoc.h  main.c
2022/: LICENSE  Makefile  README.md  main.py
2022/src/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
2023/: Cargo.toml  Makefile  README.md
2023/src/: lib.rs
2024/: LICENSE  Makefile
2024/src/: Day01.java  Day02.java  Day03.java  Day04.java  Day05.java  Day06.java  Day07.java  Day08.java  Day09.java  Day10.java  Day11.java  Day12.java  Day13.java  Day14.java  Day15.java  Day16.java  Day17.java  Day18.java  Day19.java  Day20.java  Day21.java  Day22.java  Day23.java  Day24.java  Day25.java  Main.java
