[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Benjamin Andre"]
edition = "2021"
default-run = "aoc2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
itertools = "0.12"
hashbrown = "0.14"
regex = "1.10.2"
num-integer = "0.1.44"
bindgen = "0.69"

# lib proc-macro dependencies
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
